# sheet

./: README.md  hubconf.py  mkdocs.yml  pyproject.toml  setup.cfg
docs/: benchmarking.md  index.md  mos-bench.md  pretrained-models.md  training.md
egs/BENCHMARKS/: run_brspeechmos_test.sh  run_hablamos_test.sh  run_singmos_test.sh  run_tcd_voip_test.sh  run_tmhint_qi_test.sh  run_ttsds2_test.sh
egs/brspeechmos/local/: data_download.sh
egs/bvcc+nisqa+pstn+singmos+somos+tencent+tmhint-qi/: run.sh
egs/hablamos/local/: data_download.sh
egs/pstn/: path.sh
egs/tcd-voip/local/: data_download.sh
egs/tencent/conf/: ssl-mos-wav2vec2.yaml
egs/ttsds2/local/: data_download.sh
egs/urgent2024-mos/: run.sh
egs/urgent2024-mos/local/: data_download.py  data_download.sh
