[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "sheet"
version = "0.1.0"
description = "Speech Human Evaluation Estimation Toolkit (SHEET)"
requires-python = "==3.10.13"

authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "numpy==1.26.4",
    "tqdm>=4.67.1",
    "h5py>=3.15.1",
    "pyyaml>=6.0.3",
    "transformers>=4.57.1",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "wheel>=0.45.1",
    "prettytable>=3.16.0",
    "matplotlib>=3.10.7",
    "s3prl>=0.4.18",
    "humanfriendly>=10.0",
    "tensorboardx>=2.6.4",
]
